# Inverse-Optimal-Control-cpp

./: CMakeLists.txt  README.md
apps/: main_IOC_bayesopt.cpp
data/: ddq_ref.txt  dq_ref.txt  q_ref.txt  s2_trial_1_lifting_environment.txt  spline_traj_s2_trial_1.txt
include/: NLP_DOC_constr_humantable.h  bayesopt_ioc.h  cost-functions.h  mechanical_model.h  polynomial_splines.h  utils.h
src/: NLP_DOC_constr_humantable.cpp  cost-functions.cpp  mechanical_model.cpp  polynomial_splines.cpp  utils.cpp
